crates/solidity/testing/snapshots/bindings_output/yul/imported_constant/generated/v1/0.6.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

References and definitions: 
   ╭─[main.sol:1:1]
   │
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 4 │     function test() public {
   │              ──┬─  
   │                ╰─── name: 2
   │ 
 6 │             let x := add(FOO, 1)
   │                 ┬    ─┬─ ─┬─  
   │                 ╰───────────── name: 3
   │                       │   │   
   │                       ╰─────── ref: built-in
   │                           │   
   │                           ╰─── unresolved
───╯
Definiens: 
   ╭─[main.sol:1:1]
   │
 2 │ ╭───▶ 
   ┆ ┆ ┆   
 4 │ │ ╭─▶     function test() public {
   ┆ ┆ ┆   
 6 │ │ │               let x := add(FOO, 1)
   │ │ │                   ┬  
   │ │ │                   ╰── definiens: 3
   ┆ ┆ ┆   
 8 │ │ ├─▶     }
   │ │ │           
   │ │ ╰─────────── definiens: 2
 9 │ ├───▶ }
   │ │         
   │ ╰───────── definiens: 1
───╯
Parse errors:
Error: Expected ContractKeyword or EnumKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
   ╭─[constants.sol:1:1]
   │
 1 │ uint256 constant FOO = 1;
   │ ─────────────┬────────────  
   │              ╰────────────── Error occurred here.
───╯
References and definitions: 
Definiens: 
